working powerpoint sim

--- a/data/desktop/Explorer/contents.html
+++ b/data/desktop/Explorer/contents.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <div class='frameContent'>
+      <iframe id='load' src="http://www.w3schools.com" sandbox></iframe>
     </div>
   </body>
 </html>
