--- a/data/desktop/My_Docs/contents.html
+++ b/data/desktop/My_Docs/contents.html
@@ -1,25 +1,8 @@
-<!-- <html> -->
-<div class='textBox'>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-  <div>This is some text</div>
-</div>
-<!-- </html> -->
+<html>
+  <body>
+    <div class='frameContent'>
+      <!-- <eye-con name='Notes' type='txt'></eye-con>
+      <eye-con name='present' type='pp'></eye-con> -->
+    </div>
+  </body>
+</html>
