--- a/data/desktop/Notepad/contents.html
+++ b/data/desktop/Notepad/contents.html
@@ -1,5 +1,7 @@
 <html>
-  <div class='textBox' id='text' contentEditable>
+  <body>
+    <div class='textBox' id='text' contentEditable>
 
-  </div>
+    </div>
+  </body>
 <html>
