fixed explorer issues

--- a/data/drk/close.html
+++ b/data/drk/close.html
@@ -4,6 +4,6 @@
     <p class="intro">Sorry, we cannot find the page you are looking for.</p>
     <p class="intro">It might have been removed, had its name changed, or is temporarily unavailable. </p>
     <p class="intro">Please check that the Web site address is spelled correctly.</p>
-    <p class="intro">Did you mean:<a href="data/drk/video.html">www.labsecurity.com/drk</a>?</p>
+    <p class="intro">Did you mean:<a href="video.html">www.labsecurity.com/drk</a>?</p>
   </body>
 </html>
